[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] } # command line interface
colored = "2.0"                                   # color output and bold and other cool output for terminalkk
num = "0.4"
itertools = "0.12"